# denco

./: .gitignore  Cargo.toml  README.md
benches/: denco.rs
src/: avx.rs  fast.rs  lib.rs  memory_efficient.rs  parallel.rs  single.rs
