[package]
name = "denco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.3"

[dev-dependencies]
criterion = "0.3.5"
rand = { version = "0.8.5", features = ["small_rng"] }

[[bench]]
name = "denco"
harness = false
debug = true
debuginfo-level = 1

[profile.bench]
debug = true
debuginfo-level = 1